--- a/public/css/seatBookingPage.css
+++ b/public/css/seatBookingPage.css
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
-.all {
+body {
   background-color: #242333;
+}
+
+.all {
   color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin: 0;
+  margin-top: -8rem;
 }
 
 .movie-container {
@@ -39,15 +43,26 @@
 
 .seat {
   background-color: #444451;
-  height: 12px;
-  width: 15px;
+  height: 21px;
+  width: 25px;
   margin: 3px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  position: relative;
+}
+
+.seat-info {
+  color: black;
+  margin-top: 5px;
+  margin-left: 6px;
+  position: absolute;
+  z-index: -1;
+  font-size: 0.5rem;
+  font-weight: bold;
 }
 
 .seat.selected {
-  background-color: #6feaf6;
+  background-color: #f0ad4e;
 }
 
 .seat.occupied {
@@ -108,7 +123,23 @@
 
 .data {
   color: #6feaf6;
+}
 
+.book-seat-btn {
+  padding: 0.75rem;
+  margin: 1rem;
+}
+
+.card {
+  background-color: transparent;
+  margin-bottom: -8rem;
+  color: #6feaf6;
+  width: 10%;
+  height: 8%;
+}
+
+.card-body {
+  text-align: center;
 }
 
 p.text {
@@ -118,4 +149,3 @@ p.text {
 p.text span {
   color: #6feaf6;
 }
-
